# ipk_exercises

./: .gitignore  CMakeLists.txt  canvas.hh  frequencies.hh  frequencysource.hh  iteration.hh  iterationresult.hh  letterfrequencies.cc  letters.cc  letters.txt  mandelbrot.cc  pgm.cc  point.hh  poly.cc  swap.cc  words.cc
